--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -149,7 +149,8 @@ a:focus { color: #0099cc;
 .lift_part:hover{color: #0099cc;}
 .lift_part:first-child{padding: 0 10px 0 0;}
 .lift_part:last-child{padding: 0 0 0 10px;}
-.search-head{width: 56% !important; height: 54px;}
+.search-head{
+  width: 56% !important; height: 54px;}
 .search-head:focus {
     -webkit-box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.61);
     -moz-box-shadow: 0px 0px 8px 2px rgba(255,255,255,0.61);
