Guest user changes

--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -33,7 +33,7 @@
           <script type="text/ng-template" id="searchbox.tpl.html">
             <input type="text" class="form-control" placeholder="Search Location"/>
           </script>
-          <div class="jobsite-lookup" ng-if="showMap" >
+          <div class="jobsite-lookup">
             <ui-gmap-google-map
               center="map.center"
               zoom="map.zoom"
