--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -20,7 +20,7 @@
 							<span class="glyphicon glyphicon-align-justify hidden-xs"></span>
 							<div class="cd-dropdown-wrapper cd-dropdown-wrapper-small ">
 										<a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small leftmargin" menu-aim-dir href="#0">Equipments</a>
-										<nav class="cd-dropdown" click-outside="closeThis()">
+										<nav class="cd-dropdown">
 											<h2>Title</h2>
 											<a href="#0" class="cd-close">Close</a>
 											<ul class="cd-dropdown-content">
