--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -24,129 +24,16 @@
 											<h2>Title</h2>
 											<a href="#0" class="cd-close">Close</a>
 											<ul class="cd-dropdown-content">
-												<!-- <li>
-													<form class="cd-search">
-														<input type="search" placeholder="Search...">
-													</form>
-												</li> -->
-												<!--<li class="has-children" ng-repeat="menu in equipmentMenus">-->
-													<!--<a href="#">{{menu.Name}}</a>-->
-
-													<!--<ul class="cd-secondary-dropdown is-hidden">-->
-														<!--<li class="go-back"><a href="#0">Menu</a></li>-->
-														<!--<li class="see-all"><a href="#">All Clothing</a></li>-->
-														<!--<li class="has-children">-->
-															<!--<a href="#">Accessories</a>-->
-
-															<!--<ul class="is-hidden">-->
-																<!--<li class="go-back"><a href="#0">Clothing</a></li>-->
-																<!--<li class="see-all"><a href="#">All Accessories</a></li>-->
-																<!--<li class="has-children">-->
-																	<!--<a href="#0">Beanies</a>-->
-
-																	<!--<ul class="is-hidden">-->
-																		<!--<li class="go-back"><a href="#0">Accessories</a></li>-->
-																		<!--<li class="see-all"><a href="#">All Benies</a></li>-->
-																		<!--<li><a href="#">Caps &amp; Hats</a></li>-->
-																		<!--<li><a href="#">Gifts</a></li>-->
-																		<!--<li><a href="#">Scarves &amp; Snoods</a></li>-->
-																	<!--</ul>-->
-																<!--</li>-->
-																<!--<li class="has-children">-->
-																	<!--<a href="#0">Caps &amp; Hats</a>-->
-
-																	<!--<ul class="is-hidden">-->
-																		<!--<li class="go-back"><a href="#0">Accessories</a></li>-->
-																		<!--<li class="see-all"><a href="#">All Caps &amp; Hats</a></li>-->
-																		<!--<li><a href="#">Beanies</a></li>-->
-																		<!--<li><a href="#">Caps</a></li>-->
-																		<!--<li><a href="#">Hats</a></li>-->
-																	<!--</ul>-->
-																<!--</li>-->
-																<!--<li><a href="#">Glasses</a></li>-->
-																<!--<li><a href="#">Gloves</a></li>-->
-																<!--<li><a href="#">Jewellery</a></li>-->
-																<!--<li><a href="#">Scarves</a></li>-->
-															<!--</ul>-->
-														<!--</li>-->
-
-														<!--<li class="has-children">-->
-															<!--<a href="#">Bottoms</a>-->
-
-															<!--<ul class="is-hidden">-->
-																<!--<li class="go-back"><a href="#0">Clothing</a></li>-->
-																<!--<li class="see-all"><a href="#">All Bottoms</a></li>-->
-																<!--<li><a href="#">Casual Trousers</a></li>-->
-																<!--<li class="has-children">-->
-																	<!--<a href="#0">Jeans</a>-->
-
-																	<!--<ul class="is-hidden">-->
-																		<!--<li class="go-back"><a href="#0">Bottoms</a></li>-->
-																		<!--<li class="see-all"><a href="#">All Jeans</a></li>-->
-																		<!--<li><a href="#">Ripped</a></li>-->
-																		<!--<li><a href="#">Skinny</a></li>-->
-																		<!--<li><a href="#">Slim</a></li>-->
-																		<!--<li><a href="#">Straight</a></li>-->
-																	<!--</ul>-->
-																<!--</li>-->
-																<!--<li><a href="#0">Leggings</a></li>-->
-																<!--<li><a href="#0">Shorts</a></li>-->
-															<!--</ul>-->
-														<!--</li>-->
-
-														<!--<li class="has-children">-->
-															<!--<a href="#">Jackets</a>-->
-
-															<!--<ul class="is-hidden">-->
-																<!--<li class="go-back"><a href="#0">Clothing</a></li>-->
-																<!--<li class="see-all"><a href="#">All Jackets</a></li>-->
-																<!--<li><a href="#">Blazers</a></li>-->
-																<!--<li><a href="#">Bomber jackets</a></li>-->
-																<!--<li><a href="#">Denim Jackets</a></li>-->
-																<!--<li><a href="#">Duffle Coats</a></li>-->
-																<!--<li><a href="#">Leather Jackets</a></li>-->
-																<!--<li><a href="#">Parkas</a></li>-->
-															<!--</ul>-->
-														<!--</li>-->
-
-														<!--<li class="has-children">-->
-															<!--<a href="#">Tops</a>-->
-
-															<!--<ul class="is-hidden">-->
-																<!--<li class="go-back"><a href="#0">Clothing</a></li>-->
-																<!--<li class="see-all"><a href="#">All Tops</a></li>-->
-																<!--<li><a href="#">Cardigans</a></li>-->
-																<!--<li><a href="#">Coats</a></li>-->
-																<!--<li><a href="#">Polo Shirts</a></li>-->
-																<!--<li><a href="#">Shirts</a></li>-->
-																<!--<li class="has-children">-->
-																	<!--<a href="#0">T-Shirts</a>-->
-
-																	<!--<ul class="is-hidden">-->
-																		<!--<li class="go-back"><a href="#0">Tops</a></li>-->
-																		<!--<li class="see-all"><a href="#">All T-shirts</a></li>-->
-																		<!--<li><a href="#">Plain</a></li>-->
-																		<!--<li><a href="#">Print</a></li>-->
-																		<!--<li><a href="#">Striped</a></li>-->
-																		<!--<li><a href="#">Long sleeved</a></li>-->
-																	<!--</ul>-->
-																<!--</li>-->
-																<!--<li><a href="#">Vests</a></li>-->
-															<!--</ul>-->
-														<!--</li>-->
-													<!--</ul> &lt;!&ndash; .cd-secondary-dropdown &ndash;&gt;-->
-												<!--</li> &lt;!&ndash; .has-children &ndash;&gt;-->
-
 												<li class="has-children">
 													<a href="#">Rent</a>
 
-													<ul class="cd-dropdown-gallery is-hidden">
+													<ul class="cd-dropdown-icons is-hidden">
 														<li class="go-back"><a href="#0">Menu</a></li>
 														<li class="see-all" ><a ui-sref="hm.search.results">Browse More Categories</a></li>
 														<li ng-repeat="category in displayCategories | limitTo :6">
-															<a class="cd-dropdown-item" ui-sref="hm.search.results({category_id : category.Id })">
-																<img ng-src="{{category.Image_path}}" alt="Product Image" style="width: 50px;height: 50px;" err-src="">
-																<h3>{{category.Name}}</h3>
+															<a class="cd-dropdown-item leftpadding" ui-sref="hm.search.results({category_id : category.Id })">
+																<img ng-src="{{category.Image_path}}" alt="Product Image" style="width: 50px;height: 50px; margin-right: 15px;" err-src="" class="pull-left">
+																<h3 class="heading-text normal-font bottommargin category-name">{{category.Name}}</h3>
 															</a>
 														</li>
 													</ul> <!-- .cd-dropdown-gallery -->
@@ -159,13 +46,13 @@
 														<!--<li class="see-all"><a href="http://codyhouse.co/?p=748">Browse Services</a></li>-->
 														<li>
 															<a class="cd-dropdown-item item-1" href="http://codyhouse.co/?p=748">
-																<h3>Texas</h3>
+																<h3 class="heading-text category-name bottommargin normal-font">Texas</h3>
 															</a>
 														</li>
 
 														<li>
 															<a class="cd-dropdown-item item-2" href="http://codyhouse.co/?p=748">
-																<h3>California</h3>
+																<h3 class="heading-text category-name bottommargin normal-font">California</h3>
 															</a>
 														</li>
 													</ul> <!-- .cd-dropdown-icons -->
