--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -21,7 +21,8 @@
                       <span class="bubble">
                       </span>
                   <i class="fa fa-check-circle color-blue" ng-if="value.complete"></i>&nbsp
-                  <span class="progress-span" sttr="{{value | json}}">{{value.label}}</span>
+                  <span class="progress-span value-label-span" sttr="{{value | json}}">{{value.label}}</span>
+                  <span class="progress-span value-id-span" sttr="{{value | json}}">{{value.od}}</span>
                 </a>
               </li>
               <!--<li class="pending on-hover-pointer" ui-sref="hm.cart.updateAddress">-->
