--- a/src/app/styles/media.css
+++ b/src/app/styles/media.css
@@ -376,7 +376,13 @@
     margin-top: 0px !important;
   }
 
+  .value-label-span {
+    display: none;
+  }
 
+  .value-id-span {
+    display: inline-block;
+  }
 }
 
 @media screen and (max-width: 600px) {
